Fix navbar spacing for small devices

--- a/_sass/_navbar.sass
+++ b/_sass/_navbar.sass
@@ -11,6 +11,9 @@
 
 .index-navbar .nav-list-item,
 .nav-list-item
+  +media(max-width 1180px)
+    margin:
+      top: 50px
   flex-grow: 1
   margin:
     top: 15px
